--- a/trunk/VietRestaurant2.0/Properties/Resources.resx
+++ b/trunk/VietRestaurant2.0/Properties/Resources.resx
@@ -136,6 +136,9 @@
   <data name="add_48" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\add_48.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="001_43" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\001_43.gif;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="beer_48" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\beer_48.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
@@ -190,7 +193,7 @@
   <data name="arrow_right_48" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\arrow_right_48.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="001_43" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\001_43.gif;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="spanner_48" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\spanner_48.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
